<resources>
    <string name="app_name">File Locker</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="document">Document</string>
    <string name="other">Other</string>
    <string name="security">Hide files</string>
    <string name="videos">Videos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_now">Not now!</string>
    <string name="rate">Rate!</string>
    <string name="rate_app">Please rate 5 stars for us!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="images">Images</string>
    <string name="musics">Musics</string>
    <string name="documents">Documents</string>
    <string name="alimages">Album Image</string>
    <string name="almusics">Album Music</string>
    <string name="alvideos">Album Video</string>
    <string name="aldocuments">Documents</string>
    <string name="no_choice">No choice</string>
    <string name="b_n_ng_b_o_m_t">Do you want to secure this data?</string>
    <string name="decode_file">You want to remove security for this data?</string>
    <string name="backto">Press back again to exit</string>
    <string name="size_5mb"><![CDATA[Size > 1MB: Hidden file]]></string>
    <string name="processing">Processing...</string>
    <string name="permission_sd">Permission use to SD Card</string>
    <string name="per">permission</string>
    <string name="title_activity_home">HomeActivity</string>

</resources>
