<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_selector">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/s20dp"
        android:orientation="vertical"
        android:padding="@dimen/s16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/s80dp"
                android:layout_height="@dimen/s80dp"
                android:layout_marginLeft="@dimen/s10dp"
                android:src="@drawable/ic_rate" />

            <com.security.filelocker.utils.CustomTextViewSanFranciscoMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s20dp"
                android:text="@string/rate_app"
                android:textColor="#111"
                android:textSize="@dimen/s26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s5dp"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">
            <com.security.filelocker.utils.CustomTextViewSanFranciscoDisplayRegular
                android:id="@+id/tv_not_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/s15dp"
                android:text="@string/not_now"
                android:textColor="#111"
                android:textSize="@dimen/s22sp" />
            <com.security.filelocker.utils.CustomTextViewSanFranciscoDisplayRegular
                android:id="@+id/tv_rate_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/s20dp"
                android:gravity="center"
                android:padding="@dimen/s15dp"
                android:text="@string/rate"
                android:textSize="@dimen/s22sp" />


        </LinearLayout>
    </LinearLayout>
</FrameLayout>