<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:background="@drawable/background_selector">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/s16dp"
        android:orientation="vertical"
        android:padding="@dimen/s16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/s80dp"
                android:layout_height="@dimen/s80dp"
                android:src="@drawable/ic_secure" />

            <com.security.filelocker.utils.CustomTextViewSanFranciscoMedium
                android:id="@+id/tv_title_diaglog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s16dp"
                android:text="@string/b_n_ng_b_o_m_t"
                android:textColor="#111"
                android:textSize="@dimen/s26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s15dp"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <com.security.filelocker.utils.CustomTextViewSanFranciscoDisplayRegular
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/s20dp"
                android:gravity="center"
                android:padding="@dimen/s16dp"
                android:text="@string/cancel"
                android:textColor="#111"
                android:textSize="@dimen/s22sp" />

            <com.security.filelocker.utils.CustomTextViewSanFranciscoDisplayRegular
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/s20dp"
                android:gravity="center"
                android:paddingBottom="@dimen/s16dp"
                android:paddingLeft="@dimen/s20dp"
                android:paddingRight="@dimen/s20dp"
                android:paddingTop="@dimen/s16dp"
                android:text="@string/ok"

                android:textColor="#111"
                android:textSize="@dimen/s22sp" />


        </LinearLayout>
    </LinearLayout>
</FrameLayout>