<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_process" />



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e4e4e4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/s16dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/s16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/ln_image"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_clicked"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="@dimen/s120dp"
                            android:layout_height="@dimen/s120dp"
                            android:src="@drawable/ic_photos" />

                        <com.security.filelocker.utils.CustomTextViewSanFranciscoMedium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s16dp"
                            android:gravity="center"
                            android:text="@string/image"
                            android:textSize="@dimen/s28sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ln_audio"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/s16dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_clicked"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="@dimen/s120dp"
                            android:layout_height="@dimen/s120dp"
                            android:src="@drawable/ic_music2s" />

                        <com.security.filelocker.utils.CustomTextViewSanFranciscoMedium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s16dp"
                            android:gravity="center"
                            android:text="@string/audio"
                            android:textSize="@dimen/s28sp" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/s16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/ln_video"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_clicked"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="@dimen/s120dp"
                            android:layout_height="@dimen/s120dp"
                            android:src="@drawable/ic_videos" />

                        <com.security.filelocker.utils.CustomTextViewSanFranciscoMedium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s16dp"
                            android:gravity="center"
                            android:text="@string/video"
                            android:textSize="@dimen/s28sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ln_document"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/s16dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_clicked"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="@dimen/s120dp"
                            android:layout_height="@dimen/s120dp"
                            android:src="@drawable/ic_files" />

                        <com.security.filelocker.utils.CustomTextViewSanFranciscoMedium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s16dp"
                            android:gravity="center"
                            android:text="@string/document"
                            android:textSize="@dimen/s28sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/ln_security"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_clicked"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="@dimen/s120dp"
                            android:layout_height="@dimen/s120dp"
                            android:src="@drawable/ic_protecteds" />

                        <com.security.filelocker.utils.CustomTextViewSanFranciscoMedium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/security"
                            android:textSize="@dimen/s28sp" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/layout_ads"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/s65dp"
                    android:layout_gravity="bottom"
                    android:visibility="gone"></RelativeLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_permiss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a5111111"
        android:clickable="true"
        android:weightSum="8"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <com.security.filelocker.utils.CustomTextViewSanFranciscoBold
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/permission_sd"
            android:textColor="#fff"
            android:textSize="@dimen/s20sp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPaper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/s20dp"
            android:layout_marginRight="@dimen/s20dp"
            android:background="@drawable/background_selector" />

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="@dimen/s20dp"
            android:layout_marginRight="@dimen/s20sp">

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/s50dp"
                app:ci_height="@dimen/s5dp"
                app:ci_margin="@dimen/s5dp"
                app:ci_width="@dimen/s5dp" />

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="@dimen/s100dp"
                android:layout_height="@dimen/s40dp"
                android:layout_gravity="right"
                android:background="@drawable/selector_button"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="#ffffff"
                android:textSize="@dimen/s18sp" />
        </FrameLayout>

    </LinearLayout>
</FrameLayout>
